# estate-hub

./: .gitignore  LICENSE  README.md  conftest.py  docker-compose.dev.yml  docker-compose.prod.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  conftest.py  pyproject.toml
backend/alembic/versions/: 190e561ac0f9_add_response_json_to_payment_requests.py  19b7d807824d_add_unique_property_name_per_org_and_.py  1b4a7577c918_create_lease_terms_table.py  1e48b2e796fa_add_effective_from_and_terminated_on_to_.py  26fe4980fd56_create_users_table.py  3469e2ef0844_create_lease_deposits_table.py  456bbcac1c4d_add_partial_unique_index_for_one_active_.py  55e66308f0cf_create_bills_table.py  80ed755ede1d_create_payment_requests_and_payments_.py  851aa11044b2_add_price_to_units.py  8f4a6197f3fc_add_rate_to_lease_terms.py  95cb8c62e167_add_unique_pending_payment_request_per_.py  a1b2c3d4e5f6_add_type_to_lease_terms.py  a7b1c2d3e4f5_add_logo_url_to_organizations.py  aaf6201a3c39_create_permissions_table.py  b2c3d4e5f6a7_move_bill_dates_to_bill_items.py  b846d99257fc_create_leases_table.py  b8c3d4e5f6a7_add_category_to_properties.py  beb1a470a5eb_tie_user_roles_to_user_accounts.py  c3d4e5f6a7b8_add_lease_term_id_to_bill_items.py  c7e91a4b0d23_create_media_table.py  d0d9b853d359_add_search_indexes_to_properties_and_.py  d60e55782bf0_create_organizations_table.py  dc8dac39e77a_create_refresh_tokens_table.py  e5c7f54a6793_add_password_hash_to_users.py  ed9ada0c0a6a_create_bill_items_table.py  f465fbacd3cb_create_properties_table.py  fc6a2786d1d6_add_email_phone_website_to_organizations.py
backend/app/: api.py  main.py  registry.py
backend/app/auth/: cookies.py  dependencies.py  emails.py  exceptions.py  routes.py  security.py  tasks.py
backend/app/billing/: dependencies.py  exceptions.py  receipts.py  routes.py  tasks.py  utils.py
backend/app/core/: celery_app.py  config.py  database.py  email.py  geo.py  middleware.py  pagination.py  s3.py  schemas.py
backend/app/leases/: dependencies.py  routes.py  (+1 more)
(+278 files in other folders)
