[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend with SQLAlchemy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "fastapi[standard]>=0.139.0",
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]

[tool.ruff.lint.per-file-ignores]
# FastAPI uses function calls (Depends) in argument defaults by design.
"app/**/routes.py" = ["B008"]
"app/**/dependencies.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["app"]
python_files = ["test_*.py"]
addopts = "-q"
